# Ponderada-M8

./: .gitignore  README.md
cg_mw/src/cg/cg/: main_cli.py  navegacao_mapa.py  navegacao_reativa.py
meu_workspace/install/: local_setup.sh  setup.sh
meu_workspace/install/pond_nicola/lib/pond_nicola/: pond_nicola
meu_workspace/install/pond_nicola/share/pond_nicola/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
meu_workspace/log/: latest_build
meu_workspace/src/cg_interfaces/: CMakeLists.txt  package.xml
meu_workspace/src/cg_interfaces/srv/: MoveCmd.srv
meu_workspace/src/pond_nicola/: package.xml  setup.cfg  setup.py
meu_workspace/src/pond_nicola/pond_nicola/: main.py  navegacao_reativa.py
